Fix: Message parts overflowing to empty next line
(cherry picked from commit 1b1d9ae1d1be4fb387fb0c1a5de8d3ac37401ef0)

--- a/assets/SCSS/_messages.scss
+++ b/assets/SCSS/_messages.scss
@@ -30,6 +30,10 @@
 		white-space: normal;
 		line-height: 1.5em;
 
+		&:last-child {
+			margin-right: 0;
+		}
+
 		img[data-emote-name] {
 			cursor: pointer;
 		}
